--- a/package.json
+++ b/package.json
@@ -10,10 +10,19 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "cookie": "^0.5.0",
+    "daisyui": "^2.51.6",
+    "js-cookie": "^3.0.5",
     "next": "13.4.3",
     "postcss": "8.4.23",
+    "qs": "^6.11.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.8.0",
+    "react-query": "^3.39.3",
+    "swr": "^2.1.5",
     "tailwindcss": "3.3.2"
   }
 }
