--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.4.0",
     "cookie": "^0.5.0",
     "daisyui": "^2.51.6",
+    "framer-motion": "^10.12.16",
     "js-cookie": "^3.0.5",
     "next": "13.4.3",
     "postcss": "8.4.23",
